--- a/index.html
+++ b/index.html
@@ -2175,8 +2175,8 @@ async function startAvalanche() {
       <h4 style="margin-top:16px;">So what do you actually do with a saved hash?</h4>
 <br>
       <ul>
-        <li>✔ Save the <strong>hash somewhere safe</strong> (email, PDF, note, claim file).</li>
-        <li>✔ Later, paste the <strong>original text or file</strong> back into NOVAK.</li>
+        ✔ Save the <strong>hash somewhere safe</strong> (email, PDF, note, claim file).
+        ✔ Later, paste the <strong>original text or file</strong> back into NOVAK.
       </ul>
 <br>
       <p>If the hash <strong>matches</strong> → nothing changed.</p>
