--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 .diagram-box {
   background: var(--card);
   border: 1px solid var(--border);
-  padding: 14px;
   border-radius: 8px;
   font-family: 'JetBrains Mono', monospace;
   white-space: pre-wrap;
@@ -1894,16 +1893,6 @@ async function startAvalanche() {
 
 </div>
   
-<!-- ========================================================= -->
-<!-- CENTERED HASH + AUTO-VERIFICATION + RGAC + RECEIPT BLOCK -->
-<!-- ========================================================= -->
-
-<div class="card"
-     style="margin-top:32px; 
-            max-width:820px; 
-            margin-left:auto; 
-            margin-right:auto;">
-
 <!-- ============================= -->
 <!-- 🔐 CRYPTOGRAPHIC HASH OUTPUT -->
 <!-- ============================= -->
@@ -1924,7 +1913,7 @@ async function startAvalanche() {
 </div>
 
 <!-- ============================================== -->
-<!-- 🌐 UNIFIED CENTER CONTAINER (Fixes All Alignment) -->
+<!-- 🌐 UNIFIED CENTER CONTAINER -->
 <!-- ============================================== -->
 <div id="novakCenter" 
      style="
@@ -1935,7 +1924,7 @@ async function startAvalanche() {
      ">
 
 <!-- ========================================================= -->
-<!--  AUTO-VERIFICATION + RGAC + RECEIPT (CENTERED CONTAINER) -->
+<!-- AUTO-VERIFICATION + RGAC + RECEIPT -->
 <!-- ========================================================= -->
 
 <div class="card" style="margin-top:32px;">
@@ -2028,6 +2017,11 @@ async function startAvalanche() {
   </div>
 
 </div>
+
+<!-- =============================================== -->
+<!-- END OF VERIFICATION SUITE -->
+<!-- =============================================== -->
+
 
 
 </div>
