--- a/index.html
+++ b/index.html
@@ -1854,20 +1854,21 @@ async function startAvalanche() {
 <!-- MAIN HASH + RGAC + RECEIPT ENGINE -->
 <div id="novakIntegritySuite">
 
-  <!-- HASH OUTPUT -->
-  <div class="card" style="margin-top:32px;">
-    <h3 class="section-title" style="font-size:20px; text-align:center;">
-      Cryptographic Hashes
-    </h3>
+<!-- HASH OUTPUT -->
+<div class="card" style="margin-top:32px;">
+  <h3 class="section-title" style="font-size:20px; text-align:center;">
+    Cryptographic Hashes
+  </h3>
 
-    <div id="hashOutputList"
-         style="margin-top:10px;
-                font-family:'JetBrains Mono', monospace;
-                font-size:14px;
-                text-align:center;">
-      <em>Waiting for input from above...</em>
-    </div>
+  <div id="hashOutputList"
+       style="margin-top:16px;
+              font-family:'JetBrains Mono', monospace;
+              font-size:15px;
+              line-height:1.55;
+              text-align:center;">
+    <em>Waiting for input from above...</em>
   </div>
+</div>
 
   <!-- AUTO VERIFY ENGINE -->
   <div class="card" style="margin-top:32px;">
