--- a/index.html
+++ b/index.html
@@ -1823,14 +1823,35 @@ async function startAvalanche() {
     style="width:100%; height:170px; margin-top:16px; font-family:'JetBrains Mono', monospace;
            font-size:14px; padding:12px;"></textarea>
 
-  <!-- ✅ Hash Algorithm Selector -->
-  <div style="margin-top:16px; display:flex; flex-wrap:wrap; gap:18px;">
-<label><input type="checkbox" value="sha256" checked> SHA-256</label>
-<label><input type="checkbox" value="sha512"> SHA-512</label>
-<label><input type="checkbox" value="sha384"> SHA-384</label>
-<label><input type="checkbox" value="sha3_256"> SHA-3-256</label>
+<!-- HASH ALGORITHM SELECTOR -->
+<div style="margin-top:16px; display:flex; flex-wrap:wrap; gap:18px;">
 
-  </div>
+  <label><input type="checkbox" value="sha256" checked> SHA-256</label>
+  <label><input type="checkbox" value="sha512"> SHA-512</label>
+  <label><input type="checkbox" value="sha384"> SHA-384</label>
+
+  <!-- SHA-3 DISABLED UNTIL ADVANCED MODE ENABLED -->
+  <label style="opacity:0.4; cursor:not-allowed;">
+    <input type="checkbox" value="sha3_256" id="sha3box" disabled>
+    SHA-3-256
+  </label>
+
+</div>
+
+<!-- ADVANCED MODE -->
+<div style="margin-top:12px;">
+  <button id="enableAdvanced"
+          class="pill-btn"
+          style="border:1px solid var(--blue); padding:6px 14px; border-radius:8px;"
+          onclick="enableAdvancedSHA3()">
+    🔧 Enable Advanced Algorithms (SHA-3)
+  </button>
+
+  <p id="advancedNote"
+     style="margin-top:6px; font-size:12px; color:#888; display:none;">
+    SHA-3-256 enabled — using JavaScript fallback because browsers do NOT support SHA-3 natively.
+  </p>
+</div>
 
 <p style="margin-top:6px; font-size:13px; opacity:0.85;">
 🚫This public demo is for educational purposes only — NOT for HIPAA-regulated environments.
@@ -4399,6 +4420,9 @@ RGAC Block: ${String(window.rgacCounter).padStart(8, "0")}
 </script>
   
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/js-sha3@0.8.0/src/sha3.min.js"></script>
+
   
 </body>
 </html>
